basic login integration

--- a/mytime-ui/src/index.html
+++ b/mytime-ui/src/index.html
@@ -1,14 +1,36 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>MytimeUi</title>
+
+  <title>MyTime | Payroll, Timesheets & Employee Management</title>
+
+  <meta name="description"
+    content="MyTime is an all-in-one payroll management system with timesheets, payslips, employee management, attendance tracking, and secure document management." />
+
+  <meta name="keywords"
+    content="payroll management, timesheet software, payslip management, employee management system, HR software, attendance tracking, document management, payroll India" />
+
+  <meta name="author" content="MyTime" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" />
+
+  <!-- Open Graph (Social Sharing) -->
+  <meta property="og:title" content="MyTime | Payroll & Employee Management System" />
+  <meta property="og:description"
+    content="Manage payroll, timesheets, employees, payslips, attendance, and documents in one secure platform." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mytime.app" />
+  <meta property="og:image" content="/assets/images/og-mytime.png" />
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
