--- a/mytime-ui/src/index.html
+++ b/mytime-ui/src/index.html
@@ -24,6 +24,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mytime.app" />
   <meta property="og:image" content="/assets/images/og-mytime.png" />
+  <meta http-equiv="Content-Security-Policy" content="default-src * self blob: data: gap:; style-src * self 'unsafe-inline' blob: data: gap:; script-src * 'self' 'unsafe-eval' 'unsafe-inline' blob: data: gap:; object-src * 'self' blob: data: gap:; img-src * self 'unsafe-inline' blob: data: gap:; connect-src self * 'unsafe-inline' blob: data: gap:; frame-src * self blob: data: gap:;">
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
